Security patch - changing script to run as 'nobody' and adding setup step to account for this.
- changed user in collarbot.service to be 'nobody' not 'root'
- updaded setup.sh to add relevant gpio permissions to nobody

--- a/collarbot.service
+++ b/collarbot.service
@@ -4,7 +4,7 @@ Documentation=https://github.com/smouldery/shock-collar-control/wiki
 After=network.target
 
 [Service]
-User=root
+User=nobody
 ExecStart=/usr/bin/python3 /opt/collarbot/collarbot.py
 
 [Install]
